# t9d

./: .gitignore  README.md  add_wordlist.py  pyproject.toml  setup_venv.py
t9d/: __init__.py  app.py  cli.py  config.json  config.py  engine.py  overlay.py
t9d/wordlists/: en.txt  sv.txt
